--- a/about.html
+++ b/about.html
@@ -17,6 +17,23 @@
       scroll-behavior: smooth;
     }
 
+    /* Preload 'Murasuit' Font Files */
+    @font-face {
+      font-family: 'Murasuit';
+      src: url('fonts/Murasuit.woff2') format('woff2'),
+           url('fonts/Murasuit.woff') format('woff'),
+           url('fonts/Murasuit.ttf') format('truetype');
+      font-weight: 400; /* Normal weight */
+      font-style: normal;
+      font-display: swap; /* Improves loading performance */
+    }
+
+    /* Custom Class for Murasuit Font */
+    .font-Murasuit {
+      font-family: 'Murasuit', sans-serif;
+      font-weight: 400; /* Ensure using the regular weight */
+    }
+
     /* Link hover underline animation */
     .nav-link::after {
       content: '';
@@ -35,7 +52,7 @@
     header {
       background: linear-gradient(to right, #0f609b, #118f9d);
       padding: 1.5rem 2rem;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       position: sticky;
       top: 0;
       z-index: 50;
@@ -53,8 +70,9 @@
       flex-shrink: 0;
       margin-right: 2rem;
       color: #ffffff;
-      font-size: 2.5rem;
-      font-weight: 700;
+      /* Removed font-size and font-weight to allow Tailwind's utility classes */
+      /* font-size: 2.5rem;
+      font-weight: 700; */
     }
 
     /* Navigation Links */
@@ -379,7 +397,8 @@
     <div class="container mx-auto header-container">
       <!-- Logo -->
       <div class="logo">
-        <a href="index.html">Stark International</a>
+        <!-- Applied 'font-Murasuit' and customized size using Tailwind classes -->
+        <a href="index.html" class="font-Murasuit text-5xl md:text-6xl lg:text-5xl">Stark International</a>
       </div>
 
       <!-- Navigation Links -->
@@ -387,16 +406,16 @@
         <a href="index.html" class="nav-link font-medium">Home</a>
         <a href="about.html" class="nav-link font-medium">About</a>
         <a href="products.html" class="nav-link font-medium">Products</a>
-        <a href="#contact" class="nav-link font-medium">Contact</a>
+        <a href="contact.html" class="nav-link font-medium">Contact</a>
       </nav>
 
       <!-- WhatsApp and Gmail Icons -->
       <div class="controls">
-        <a href="https://wa.me/971518007643" target="_blank" class="transition">
+        <a href="https://wa.me/971518007643" target="_blank" class="transition" aria-label="WhatsApp">
           <i class="fab fa-whatsapp icon"></i>
         </a>
         <!-- Gmail Icon -->
-        <a href="mailto:contact@starkint.com" class="transition">
+        <a href="mailto:info@starkintl.com" class="transition" aria-label="Email">
           <i class="fas fa-envelope icon"></i>
         </a>
       </div>
@@ -499,7 +518,7 @@
           <p>Stark International HQ</p>
           <p>FBC50274 Compass Building, Al Shohada Road, AL Hamra Industrial Zone-FZ, Ras Al Khaimah, United Arab Emirates</p>
           <p class="mt-4">Phone: <a href="tel:+971518007643">+971 51 8007 643</a></p>
-          <p>Email: <a href="mailto:contact@starkint.com">contact@starkint.com</a></p>
+          <p>Email: <a href="mailto:info@starkintl.com">info@starkintl.com</a></p>
         </div>
         <div class="contact-form" data-aos="fade-left">
           <h3 class="text-xl font-bold text-green-800 mb-4">Contact Us</h3>
@@ -550,7 +569,7 @@
           <a href="https://wa.me/971518007643" target="_blank">
             <i class="fab fa-whatsapp"></i>
           </a>
-          <a href="mailto:contact@starkint.com">
+          <a href="mailto:info@starkintl.com">
             <i class="fas fa-envelope icon"></i>
           </a>
           <a href="tel:+971518007643">
