--- a/aping.html
+++ b/aping.html
@@ -19,6 +19,24 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+    
+    /* Preload 'Murasuit' Font Files */
+    @font-face {
+      font-family: 'Murasuit';
+      src: url('fonts/Murasuit.woff2') format('woff2'),
+           url('fonts/Murasuit.woff') format('woff'),
+           url('fonts/Murasuit.ttf') format('truetype');
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+    }
+
+    /* Custom Class for Murasuit Font */
+    .font-Murasuit {
+      font-family: 'Murasuit', sans-serif;
+      font-weight: 400;
+    }
+
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
@@ -26,7 +44,6 @@
       background-color: #f0f4f8;
     }
 
-    /* Link hover underline animation */
     .nav-link::after {
       content: '';
       display: block;
@@ -40,24 +57,21 @@
       width: 100%;
     }
 
-    /* Header gradient */
     header {
       background: linear-gradient(to right, #0f609b, #118f9d);
       padding: 1.5rem 2rem;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       position: sticky;
       top: 0;
       z-index: 50;
     }
 
-    /* Header container adjustments */
     .header-container {
       display: flex;
       align-items: center;
       justify-content: space-between;
     }
 
-    /* Logo Style */
     .logo {
       flex-shrink: 0;
       margin-right: 2rem;
@@ -66,7 +80,6 @@
       font-weight: 700;
     }
 
-    /* Navigation Links */
     nav {
       display: flex;
       gap: 1.5rem;
@@ -78,14 +91,12 @@
       transition: color 0.3s ease;
     }
 
-    /* Icon Styles */
     .controls {
       display: flex;
       gap: 1rem;
       align-items: center;
     }
 
-    /* Icon Styles */
     .icon {
       font-size: 1.5rem;
       transition: transform 0.3s ease;
@@ -98,66 +109,64 @@
     }
 
     .footer {
-  background: linear-gradient(to right, #0f609b, #118f9d); /* Same gradient as About Us */
-  color: white;
-  padding: 4rem 2rem;
-  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
-}
+      background: linear-gradient(to right, #0f609b, #118f9d);
+      color: white;
+      padding: 4rem 2rem;
+      box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-.footer-container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
+    .footer-container {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
 
-.footer-section {
-  flex: 1;
-  margin-bottom: 2rem;
-  min-width: 200px; /* Ensures responsiveness */
-}
+    .footer-section {
+      flex: 1;
+      margin-bottom: 2rem;
+      min-width: 200px;
+    }
 
-.footer-section h3 {
-  color: #ffffff;
-  font-weight: bold;
-  margin-bottom: 1rem;
-}
+    .footer-section h3 {
+      color: #ffffff;
+      font-weight: bold;
+      margin-bottom: 1rem;
+    }
 
-.footer-section ul {
-  list-style: none;
-  padding: 0;
-}
+    .footer-section ul {
+      list-style: none;
+      padding: 0;
+    }
 
-.footer-section ul li {
-  margin-bottom: 0.5rem;
-}
+    .footer-section ul li {
+      margin-bottom: 0.5rem;
+    }
 
-.footer-section a {
-  color: #ffffff;
-  text-decoration: none;
-  transition: color 0.3s;
-}
+    .footer-section a {
+      color: #ffffff;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
 
-.footer-section a:hover {
-  color: #bdbdbd;
-}
+    .footer-section a:hover {
+      color: #bdbdbd;
+    }
 
-.footer-icons {
-  display: flex;
-  gap: 1rem;
-  margin-top: 1rem;
-}
+    .footer-icons {
+      display: flex;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
 
-.footer-icons a {
-  font-size: 1.5rem; /* Adjust icon size as needed */
-  transition: transform 0.3s ease;
-}
+    .footer-icons a {
+      font-size: 1.5rem;
+      transition: transform 0.3s ease;
+    }
 
-.footer-icons a:hover {
-  transform: scale(1.1);
-}
+    .footer-icons a:hover {
+      transform: scale(1.1);
+    }
 
-
-    /* Ingredients Section Styling */
     .ingredients-section {
       max-width: 1200px;
       margin: 4rem auto;
@@ -214,7 +223,6 @@
       cursor: pointer;
     }
 
-    /* Why Choose Our APIs Section */
     .why-choose-section {
       display: flex;
       flex-wrap: wrap;
@@ -273,9 +281,9 @@
 <body>
   <header>
     <div class="container mx-auto header-container">
-      <!-- Logo -->
+      <!-- Logo - Applying the Murasuit font -->
       <div class="logo">
-        <a href="index.html">Stark International</a>
+        <a href="index.html" class="font-Murasuit text-5xl md:text-6xl lg:text-5xl">Stark International</a>
       </div>
 
       <!-- Navigation Links -->
@@ -283,7 +291,7 @@
         <a href="index.html" class="nav-link font-medium">Home</a>
         <a href="about.html" class="nav-link font-medium">About</a>
         <a href="products.html" class="nav-link font-medium">Products</a>
-        <a href="#contact" class="nav-link font-medium">Contact</a>
+        <a href="contact.html" class="nav-link font-medium">Contact</a>
       </nav>
 
       <!-- WhatsApp and Gmail Icons -->
@@ -291,21 +299,29 @@
         <a href="https://wa.me/971518007643" target="_blank" class="transition">
           <i class="fab fa-whatsapp icon"></i>
         </a>
-        <!-- Gmail Icon -->
-        <a href="mailto:contact@starkint.com" class="transition">
+        <a href="mailto: info@starkintl.com" class="transition">
           <i class="fas fa-envelope icon"></i>
         </a>
       </div>
     </div>
   </header>
 
-  <section class="fullscreen-section">
-    <div class="fullscreen-content" style="text-align: center; padding: 4rem;">
+
+  <section class="fullscreen-section" style="background-image: url('images/beakersn.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; position: relative;">
+    <!-- Optional Overlay to Enhance Text Readability -->
+    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.6); border-radius: 20px;"></div>
+  
+    <div class="fullscreen-content" style="position: relative; text-align: center; padding: 4rem; z-index: 1;">
       <h1 style="font-size: 3rem; color: #0f609b; font-weight: 700;">Active Pharmaceutical Ingredients (API)</h1>
-      <p style="font-size: 1.2rem; color: #333; margin-top: 1rem;">Providing a diverse range of high-quality APIs to cater to global needs, ensuring international quality standards and regulatory compliance.</p>
-      <a href="contact.html" class="learn-more-btn" style="display: inline-block; margin-top: 2rem; padding: 1rem 2rem; background-color: #118f9d; color: white; font-weight: 600; border-radius: 30px; transition: background-color 0.3s ease, transform 0.3s ease; text-decoration: none;">Contact Us</a>
+      <p style="font-size: 1.2rem; color: #333; margin-top: 1rem;">
+        Providing a diverse range of high-quality APIs to cater to global needs, ensuring international quality standards and regulatory compliance.
+      </p>
+      <a href="contact.html" class="learn-more-btn" style="display: inline-block; margin-top: 2rem; padding: 1rem 2rem; background-color: #118f9d; color: white; font-weight: 600; border-radius: 30px; transition: background-color 0.3s ease, transform 0.3s ease; text-decoration: none;">
+        Contact Us
+      </a>
     </div>
   </section>
+  
 
   <section id="ingredients" class="heading ingredients-section">
     <div class="ingredients-heading">
@@ -1581,7 +1597,7 @@
 
   <section class="why-choose-section">
     <div class="why-choose-image">
-      <img src="images/pathology.jpg" alt="Pathology Image">
+      <img src="images/apis.png" alt="Pathology Image">
     </div>
     <div class="why-choose-content">
       <h2>Why Choose Our APIs?</h2>
@@ -1598,6 +1614,7 @@
       <div class="footer-section">
         <h3>Our Services</h3>
         <ul>
+          <li><a href="aping.html">Acive Pharmaceutical Ingredients</a></li>
           <li><a href="excipients.html">Excipients</a></li>
         </ul>
       </div>
