--- a/index1.html
+++ b/index1.html
@@ -85,6 +85,10 @@
 
     /* Animated Dropdown Nav */
     .mobile-nav {
+      position: absolute;
+      top: 100%; /* Position below the header */
+      left: 0;
+      width: 100%;
       background: #0f609b;
       border-radius: 10px;
       padding: 0 1rem;
@@ -92,6 +96,7 @@
       transform-origin: top;
       transition: transform 0.3s ease, opacity 0.3s ease;
       opacity: 0;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
 
     .nav-open {
@@ -106,7 +111,6 @@
       font-size: 1rem;
       padding: 0.5rem 0;
       border-bottom: 1px solid rgba(255,255,255,0.2);
-      /* Removed Murasuit here, default Poppins applies */
     }
 
     .mobile-nav a:last-child {
@@ -122,7 +126,7 @@
       position: relative;
       width: 100%;
       height: 60vh;
-      margin-top: 4rem; /* Add margin-top so header doesn't overlap hero text */
+      margin-top: 4rem; /* Ensure hero is below the fixed header */
       background-size: cover;
       background-position: center;
       display: flex;
